src/app/journal/journal.component.scss
// Module dailyFood
@import '../../assets/styles/_vars';

.heroSearch {

  padding: 3rem 0;

  background-image: url('/assets/images/food2.jpg');
  background-size: cover;
  background-position: center center;

  .inner {

    background: $darker-gray;
    padding: $boxpadding;
    border-radius: 6px;

    position: relative;

    form {
      display: flex;
      flex-flow: row nowrap;
    }

    input {
      box-sizing : border-box;
      width: 100%;

      padding: $boxpadding;

      font-size: 1.4em;
      font-family: inherit;

      border: 1px solid $dark-gray;

      transition: .4s all;

      border-radius: 6px;

      height: $hero-form-height;

      &:focus {
        outline: none;
        box-shadow: 0 0 20px rgba(0,0,0,.1);
      }
    }

    .fieldGroup {

      padding-right: $boxpadding/2;
      transition: .4s all;

      &.food {
        width: 60%;
      }

      &.quantity {

        border: 1px solid $dark-gray;
        border-radius: 5px;
        overflow: hidden;

        width: 20%;

        padding-right: 30px;
        margin-right: $boxpadding/2;

        position: relative;

        input {
          border-width: 0 1px 0 0;
        }

        label {

          font-size: 1.4em;
          color: $dark-gray-font;
          height: $hero-form-height;
          line-height: $hero-form-height;

          width: 25px;
          padding-right: 4px;
          text-align: center;

          position: absolute;
          right: 0px;
          top: 0px;

        }
      }

      &.submit {
        width: 20%;

        button {
          width: 100%;
          height: 100%;
          font-size: 2em;
        }
      }

    }

    .foodNotSelected {
      .fieldGroup {

        &.food {
          width: 100%;
          padding: 0px;
        }

        &.quantity, &.submit {
          width: 0;
          overflow: hidden;
          padding: 0;
          border: 0px;
          margin: 0px;
          opacity: 0;
        }
      }
    }

    #saveFood {

    }

    .searchResults {
      &, li {
        list-style: none;
        margin: 0px;
        padding: 0px;
      }

      position: absolute;
      top: $hero-form-height + 10*2;
      left: 0;

      width: 100%;

      background: #fff;

      border-radius: 0 0 5px 5px;

      display: block;

      box-shadow: 0 1px 1px rgba(0,0,0,.2);

      li {
        padding: $boxpadding;

        &:hover {
          cursor: pointer;
          background: $light-gray;
        }
      }
    }

  }
}

.foodList {

  margin-top: 20px;

  .dateChooser {
    li {
      list-style: none;
      margin: 0px;
      padding: 0px 10px;

      &:first-child {
        padding-left: 0px;
      }
      &:last-child {
        padding-right: 0px;
      }
    }

    padding: 0 0 20px 0;
    margin: 0px;

    li {
      display: inline-block;
    }
  }

  table {
    width: 100%;

    tr:nth-child(1+2n) td {

    }

    td {
      border-bottom: 1px solid $darker-gray;

      &.time, &.quantity, &.triggers {
        width:15%;
      }

      &.quantity input {
        width: 50px;
        font-family: inherit;
        font-size: inherit;
      }

      &.foodName {
        width: 55%;
      }

      &.triggers {
        text-align: right;
      }
    }

  }
}

